--- a/GlobalCode/GlobalCode_NodeTrees/GlobalCode_NodeTrees.vcxproj.filters
+++ b/GlobalCode/GlobalCode_NodeTrees/GlobalCode_NodeTrees.vcxproj.filters
@@ -18,12 +18,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="TagPosition.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
-    <ClInclude Include="XMLOption.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\DLLAPI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -35,6 +29,12 @@
     </ClInclude>
     <ClInclude Include="XMLTagTree.h">
       <Filter>NodeTreeTemplates</Filter>
+    </ClInclude>
+    <ClInclude Include="TagPosition.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="XMLOption.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
