--- a/UtilityTools/GUICodeGenerator/GUICodeGenerator.vcxproj
+++ b/UtilityTools/GUICodeGenerator/GUICodeGenerator.vcxproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
+    <Import Project="..\..\GlobalCode\LocalLibraryVersions\GlobalCode.vcxitems" Label="Shared" Condition="Exists('..\..\GlobalCode\LocalLibraryVersions\GlobalCode.vcxitems')" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -77,9 +78,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <Text Include="ReadMe.txt" />
-  </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GUICodeGenerator.cpp" />
   </ItemGroup>
