--- a/UtilityTools/SourceMergeMover/SourceMergeMover.vcxproj
+++ b/UtilityTools/SourceMergeMover/SourceMergeMover.vcxproj
@@ -62,6 +62,7 @@
     <Import Project="..\..\..\GlobalCode\GlobalCode.vcxitems" Label="Shared" Condition="Exists('..\..\..\GlobalCode\GlobalCode.vcxitems')" />
     <Import Project="..\GlobalCode\GlobalCode.vcxitems" Label="Shared" Condition="Exists('..\GlobalCode\GlobalCode.vcxitems')" />
     <Import Project="..\GlobalCode\GlobalCode.vcxitems" Label="Shared" Condition="Exists('..\GlobalCode\GlobalCode.vcxitems')" />
+    <Import Project="..\..\GlobalCode\LocalLibraryVersions\GlobalCode.vcxitems" Label="Shared" Condition="Exists('..\..\GlobalCode\LocalLibraryVersions\GlobalCode.vcxitems')" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
