--- a/GlobalCode/GlobalCode_ExperimentalCode/GlobalCode_ExperimentalCode.vcxproj.filters
+++ b/GlobalCode/GlobalCode_ExperimentalCode/GlobalCode_ExperimentalCode.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="SuperDec.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SuperDecHex.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\DLLAPI.h">
@@ -30,6 +33,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="VariableListV2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SuperDecHex.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
