--- a/BlazesCSharpGlobalCode/BlazesCSharpGlobalCode.csproj
+++ b/BlazesCSharpGlobalCode/BlazesCSharpGlobalCode.csproj
@@ -102,11 +102,17 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalCode_ExperimentalCode\SmallDec_IEquatable.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\SmallDec_MathBasedFunctions.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\SmallDec_StandardConversions.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\SmallDec_TypeDescriptors.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\SuperDecGlobalCode.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\SuperDec_Int16_4Decimal.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\SuperDec_SmallDec_OperatorFunctions.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\SuperDec_SmallDec_OtherConversions.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\SuperDec_SmallDec_Rounding.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\SuperDec_SmallDec_TrigometricFunctions.cs" />
+    <Compile Include="GlobalCode_ExperimentalCode\VariableData.cs" />
     <Compile Include="GlobalCode_IniData\IniData.cs" />
     <Compile Include="GlobalCode_StringFunctions\StringFunctions.cs" />
     <Compile Include="GlobalCode_VariableConversionFunctions\TypeDataInfo.cs" />
